--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PORT=8081
 MONGODB_WRITE_CONNECTION_STRING=mongodb://localhost:PORT/DBNAME
-JWT_SECRET=SUPERSECRETSTRING
+JWT_ACCESS_SECRET=supersecretstring
+JWT_REFRESH_SECRET=supersecretstring
+JWT_ACCESS_EXPIRES=24h
+JWT_REFRESH_EXPIRES=168h
 SALT_ROUNDS=5
