--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,24 @@
 
 /server/.env
 /server/node_modules
+
+/client/node_modules
+/client/.pnp
+/client/.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+/client/.env
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
