--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^0.2.4"
   },
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   }
 }
