--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^16.9.14",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
+    "mobx": "^6.3.8",
+    "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
