--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.10",
     "nodemon": "^2.0.15",
+    "prettier": "2.5.1",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.2"
