--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-uuid": "^1.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.4"
   }
 }
