--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.14",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4"
   }
