--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd ../client && npm run build",
-    "install-client": "cd ../client && npm install",
+    "build": "cd ./client && npm run build",
+    "install-client": "cd ./client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "prod": "nodemon index.ts",
     "dev": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
+    "start": "concurrently --kill-others-on-fail \"npm run prod\" \"npm run start --prefix client\""
   },
   "keywords": [],
   "author": "",
