--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "prod": "nodemon index.ts",
+    "server": "nodemon index.ts",
     "dev": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill-others-on-fail \"npm run prod\" \"npm run start --prefix client\""
+    "start": "npm run server"
   },
   "keywords": [],
   "author": "",
