--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,10 @@
     "typescript": "^4.5.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "yup": "^0.32.8",
+    "@types/lodash": "^4.14.178",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
